--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "moment": "^2.22.2",
     "react": "^16.6.1",
     "react-animate-css": "0.0.1",
     "react-animated-css": "^1.0.4",
