--- a/client/package.json
+++ b/client/package.json
@@ -10,9 +10,12 @@
     "react-animated-css": "^1.0.4",
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.6.1",
+    "react-redux": "^5.1.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
-    "react-snowstorm": "0.0.2"
+    "react-snowstorm": "0.0.2",
+    "redux": "^4.0.1",
+    "sweetalert2": "^7.29.0"
   },
   "scripts": {
     "start": "react-scripts start",
